Updated web-version to 0.2

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </section>
 
 <footer>
-	Copyright &copy; 2020 Lorenz Auer & Felix Schmid
+	Copyright &copy;2020-2021 Lorenz Auer & Felix Schmid
 </footer>
 </main>
 
