--- a/WebVersion/index.html
+++ b/WebVersion/index.html
@@ -34,21 +34,27 @@
 <main style="width: 1128px;">
 
 <section class="flex" id="Download">
-	<h2> Web-Version (highly experimental!) </h2>
+	<h2> Web-Version (experimental!) </h2>
 	<p>
-		This is an early and experimental build of the web-version for our game Circuit Cracker. <br>
-		The current build is only tested on Firefox and Chrome for PC, many things such as UI and progress saving are not yet implemented
-		and you can currently only play with mouse and keyboard. (so don't try it on mobile browsers...)
-		<br><br>
-		You also might experience lag and performance issues - just to be warned...
+		This is an early and experimental build of the web-version for our game Circuit Cracker.<br>
+		The current build does not work on mobile browsers and is only tested on Firefox and Chrome.
+	</p>
+		Because this is an experimental build, you might experience performance issues or crashes - 
+		make sure to save your progress regularly!<br>
+	<p>
 	</p>
 </section>
 
 <section id="game">
 </section>
 
+<div style="display: none">
+<a href="#" id="filedownload"></a>
+<input type="file" id="fileinput" accept=".sav" />
+</div>
+
 <footer>
-	Copyright &copy; 2020 Lorenz Auer & Felix Schmid
+	Copyright &copy;2020-2021 Lorenz Auer & Felix Schmid
 </footer>
 </main>
 
