Fixed layout and loading issues

--- a/WebVersion/index.html
+++ b/WebVersion/index.html
@@ -33,15 +33,15 @@
 
 <main style="width: 1128px;">
 
-<section class="flex" id="Download">
+<section>
 	<h2> Web-Version (experimental!) </h2>
 	<p>
 		This is an early and experimental build of the web-version for our game Circuit Cracker.<br>
 		The current build does not work on mobile browsers and is only tested on Firefox and Chrome.
 	</p>
+	<p>
 		Because this is an experimental build, you might experience performance issues or crashes - 
 		make sure to save your progress regularly!<br>
-	<p>
 	</p>
 </section>
 
