Officially link the Web-Version

--- a/WebVersion/index.html
+++ b/WebVersion/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <header>
-	<div id="topnav" class="flex">
+	<div id="topnav" class="flex" style="width: 1128px;">
 		<img src="../pictures/Icon.png" alt="game icon" width="60">
 		<div id="title">
 			<div id="titleContent">
@@ -34,13 +34,12 @@
 <main style="width: 1128px;">
 
 <section>
-	<h2> Web-Version (experimental!) </h2>
+	<h2> Web-Version (experimental) </h2>
 	<p>
-		This is an early and experimental build of the web-version for our game Circuit Cracker.<br>
-		The current build does not work on mobile browsers and is only tested on Firefox and Chrome.
+		The current build does not work on mobile browsers and is only tested on Firefox and Chrome!
 	</p>
 	<p>
-		Because this is an experimental build, you might experience performance issues or crashes - 
+		Because this is still an experimental build, you might experience performance issues or crashes - 
 		make sure to save your progress regularly!<br>
 	</p>
 </section>
