--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 		<p>
 		Currently the game is completely free to play and features more than 80 levels for you to twist your head around. So what are you waiting for?
 		</p>
-		<h4><a href="downloads/CircuitCracker.zip"> Download Circuit Cracker </a></h4>
+		<a href="downloads/CircuitCracker.zip"> Download Circuit Cracker for Windows </a>
+		<p><i>OR</i></p>
+		<a href="WebVersion/index.html"> Play the Web-Version in your browser </a><br>
+		<i>(mobile browsers are NOT supported!)</i>
 	</div>
 	<div class="imageflex" style="margin-left: 16px">
 		<img src="pictures/Demo1.png" alt="in-game image" width="360" class="centeredImage">
@@ -84,8 +87,8 @@
 
 		<h5> What platforms is Circuit Cracker supporting? </h5>
 		<p>
-		Currently the demo is Windows PC only. We are aiming to also make the game playable on Linux PCs and even mobile phones on later stages of development.
-		However the level editor will stay PC only.
+		You can currently play the demo on Windows or in your browser. We are also aiming to make a dedicated version for Linux PCs
+		and even mobile phones on later stages of development. However, the level editor will stay PC only.
 		</p>
 	</div>
 	<div class="imageflex" style="margin-left: 16px">
